# RepoLume

./: .dockerignore  .editorconfig  .env.example  .gitignore  .grype.yaml  AGENTS.md  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.api.json  railway.worker.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4cafdf2faa66_add_incremental_freshness_lifecycle.py  94b0f7ce7782_add_durable_indexing_job_delivery_state.py  b83f2d8a6c41_add_versioned_static_call_graph.py  d06a6455fcd7_add_embedding_and_vector_index_lifecycle.py  d2eea490eb59_create_foundational_schema.py  da6b47f8cd61_add_multi_provider_auth_and_public_.py  f8eba5464d8c_add_authentication_and_github_access_.py  f9389ed2964e_add_static_processing_job_metadata.py
backend/app/: __init__.py  application.py  main.py  queue.py  worker.py
backend/app/agent/: __init__.py  models.py  prompt.py  provider.py  service.py  tools.py
backend/app/api/: __init__.py  auth.py  github_webhooks.py  health.py  installations.py  public_repositories.py  questions.py  repositories.py  router.py
backend/app/auth/: __init__.py  cookies.py  dependencies.py  google.py  tokens.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  request_context.py  security_headers.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  auth.py  call_edge.py  chat.py  enums.py  github_installation.py  indexing_job.py  repository.py  repository_index_build.py  symbol_definition.py  usage_record.py  user.py  user_repository.py  webhook_delivery.py
backend/app/embeddings/: __init__.py  client.py  preprocessing.py
backend/app/github/: __init__.py  client.py  public_urls.py  schemas.py
backend/app/indexing/: __init__.py  analyzer.py  call_graph.py  chunking.py  clone.py  discovery.py  evaluation.py  failures.py  freshness.py  models.py  python_parser.py  worker.py
backend/app/llm/: __init__.py  client.py  client.py.backup
backend/app/rag/: __init__.py  evaluation.py  evidence.py  models.py  prompt.py  query.py  service.py
backend/app/schemas/: __init__.py  auth.py  errors.py  health.py  installations.py  questions.py  repositories.py  webhooks.py
backend/app/services/: auth.py  health.py  indexing_jobs.py  installations.py  public_repositories.py  repositories.py  webhooks.py
backend/app/vector/: __init__.py  qdrant.py
backend/evaluation/: milestone6_cases.json  milestone7_cases.json  milestone7_fixture_observations.json  milestone8_cases.json  milestone8_fixture_observations.json  milestone9_cases.json  milestone9_fixture_observations.json
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/milestone4_repository/: partial.py
backend/tests/fixtures/milestone4_repository/docs/: guide.md  notes.rst
backend/tests/fixtures/milestone4_repository/src/package/: module.py
backend/tests/integration/: __init__.py  test_auth_github.py  test_auth_google_public.py  test_database.py  test_indexing_pipeline.py  test_migrations.py  test_repository_questions.py  test_vector_qdrant.py
backend/tests/unit/: test_agent_models_prompt.py  test_agent_service.py  test_agent_tools.py  test_call_graph.py  test_chunking.py  test_clone_discovery.py  test_config.py  test_cookies.py  test_embedding_client.py  test_embedding_preprocessing.py  test_entrypoints.py  test_freshness.py  test_freshness_evaluation.py  test_github_client.py  test_google_oidc.py  test_http_foundation.py  test_indexing_worker.py  test_llm_client.py  test_logging.py  test_models.py  test_public_repository_service.py  test_public_repository_urls.py  test_python_parser.py  test_qdrant_vector_store.py  test_queue.py  test_rag_evaluation.py  test_rag_evidence.py  test_rag_prompt.py  test_rag_query.py  test_rag_service.py  test_repository_analyzer.py  test_tokens.py
docs/: ARCHITECTURE.md  BUILD_STATUS.md  DECISIONS.md  DEPLOYMENT_M12.md  EVALUATION.md  OPERATIONS.md  PRODUCT_SPEC.md  RUNBOOKS_M12.md  SECURITY.md  SECURITY_AUDIT_M11.md
embedding_service/: Dockerfile  pyproject.toml  railway.json
embedding_service/app/: __init__.py  application.py  config.py  constants.py  download_model.py  logging.py  main.py  model.py  schemas.py
embedding_service/tests/: __init__.py  conftest.py  test_real_model.py  test_service.py
frontend/: .prettierignore  deployment-config.ts  (+9 more)
(+38 files in other folders)
