[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "repolume-embedding-service"
version = "0.5.0"
description = "RepoLume private embedding service"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.139.0",
  "fastembed==0.8.0",
  "huggingface-hub==1.24.0",
  "numpy==2.4.3",
  "onnxruntime==1.24.3",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "structlog==26.1.0",
  "tokenizers==0.22.2",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "A", "ANN", "ASYNC", "B", "BLE", "C4", "DTZ", "E", "F", "FAST", "I",
  "N", "PERF", "PIE", "PL", "PT", "RET", "RUF", "S", "SIM", "T20", "TRY",
  "UP", "W",
]
ignore = ["ANN401", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "S105", "TRY003"]
"app/config.py" = ["TRY003"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=90",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["model: downloads and runs the pinned real embedding model"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]
